# AdventOfCode2024

./: .gitignore
fred/: Cargo.toml
fred/src/day_1/: main.rs
fred/src/day_2/: main.rs
fred/src/day_3/: main.rs
fred/src/day_4/: main.rs
fred/src/day_5/: main.rs
fred/src/day_6/: main.rs
fred/src/day_7/: main.rs
zach/AdventOfCode2024/: AdventOfCode2024.sln  Day.cs  Program.cs  setup.py
zach/AdventOfCode2024/Day02/: Day02.cs
zach/AdventOfCode2024/Day03/: Day03.cs
zach/AdventOfCode2024/Day04/: Day04.cs
zach/AdventOfCode2024/Template/: Template.cs
