[package]
name = "fred"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "day-1"
path = "src/day_1/main.rs"

[[bin]]
name = "day-2"
path = "src/day_2/main.rs"

[[bin]]
name = "day-3"
path = "src/day_3/main.rs"

[[bin]]
name = "day-4"
path = "src/day_4/main.rs"

[[bin]]
name = "day-5"
path = "src/day_5/main.rs"

[[bin]]
name = "day-6"
path = "src/day_6/main.rs"

[[bin]]
name = "day-7"
path = "src/day_7/main.rs"

[dependencies]
itertools = "0.13.0"
rayon = "1.10.0"
regex = "1.11.1"
